--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,7 +21,63 @@ thead {
 tbody {
     background: LightGray;
 }
-
-div #delete{
-    color: Red;
+div#main{
+    text-align: center;
+    margin: 0 auto;
+}
+div#delete{
+    background-color: RED;
+}
+.button{
+  background-color: red;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  cursor: pointer;
+    
+}
+.button1{
+  background-color: white; 
+  color: black; 
+  border: 2px solid red;
+}
+.button1:hover{
+background-color: red;
+  color: white;
+}
+.button2{
+  background-color: white;
+  color: black;
+  border: 2px solid green;
+}
+.button2:hover{
+background-color: green;
+color: white;
+}
+.container{
+    height: 200px;
+    position: relative;
+    border: 3px solid green;
+}
+body{
+    width: 50%; /* how wide to make your web page */
+    margin: 0 auto;
+    padding: 0;
+    font:12px/16px Helvetica, sans-serif; /* default font */
+    
+}
+.center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
