--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,10 +21,23 @@ thead {
 
 tbody > tr:nth-child(odd) {background: #CCC}
 tbody > tr:nth-child(even) {background: #FFF}
+tbody {color: black}
 
 div#main{
-    text-align: center;
-    margin: 0 auto;
+    overflow: auto;
+    content: "";
+    position: fixed;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    display: block;
+    background-size: cover;
+    background-image: linear-gradient(magenta, orange);
+    background-repeat: repeat;
+    height: 100%;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
 }
 div#delete{
     background-color: RED;
@@ -72,21 +85,19 @@ div#delete{
     color: white;
 }
 .container{
-    height: 200px;
+    height: 500px;
     position: relative;
-    border: 3px solid green;
 }
 body{
     width: 500px; /* how wide to make your web page */
     margin: 0 auto;
     padding: 0;
     font:12px/16px Helvetica, sans-serif; /* default font */
-    
 }
 .center {
   margin: 0;
   position: absolute;
-  top: 50%;
+  top: 80%;
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
