--- a/stylesheet.css
+++ b/stylesheet.css
@@ -42,6 +42,7 @@ div#main{
 div#delete{
     background-color: RED;
 }
+/*button information was recieved from https://www.w3schools.com/css/css3_buttons.asp*/
 .button{
   background-color: red;
   border: none;
@@ -94,6 +95,7 @@ body{
     padding: 0;
     font:12px/16px Helvetica, sans-serif; /* default font */
 }
+/* learned how to center here https://www.w3schools.com/css/css_align.asp */
 .center {
   margin: 0;
   position: absolute;
