--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,7 +33,6 @@ div#main{
     display: block;
     background-size: cover;
     background-image: linear-gradient(magenta, orange);
-    background-repeat: repeat;
     height: 100%;
     color: white;
     font-size: 16px;
@@ -93,7 +92,7 @@ body{
     width: 500px; /* how wide to make your web page */
     margin: 0 auto;
     padding: 0;
-    font:12px/16px Helvetica, sans-serif; /* default font */
+    font:12px/16px Helvetica, Arial, sans-serif; /* default font */
 }
 /* learned how to center here https://www.w3schools.com/css/css_align.asp */
 .center {
